# vibecoding

./: .gitignore  =2.0.0  CLAUDE.md  Calibre.csv  Goodreads.csv  Notion.csv  README.md  alembic.ini  prd.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: sync-notion.md
alembic/: env.py
src/vibecoding/: __main__.py  shortener.py  urls.db  utils.py
tests/: conftest.py  test_cli.py  test_utils.py
tests/test_api/: test_openlibrary.py
tests/test_backup/: test_backup.py  test_integrity.py  test_restore.py
tests/test_challenges/: __init__.py  test_manager.py
tests/test_collections/: test_manager.py
tests/test_db/: test_schemas.py  test_sqlite.py
tests/test_discovery/: test_recommendations.py  test_search.py  test_similar.py
tests/test_etl/: test_dedupe.py  test_extract.py  test_transform.py
tests/test_export/: test_csv_export.py  test_json_export.py  test_reports.py
tests/test_imports/: test_base.py  test_calibre.py  test_csv_import.py  test_goodreads.py
tests/test_lending/: __init__.py  test_manager.py
tests/test_library/: __init__.py  test_tracker.py
tests/test_lists/: __init__.py  test_manager.py
tests/test_locations/: __init__.py  test_manager.py
tests/test_notes/: __init__.py  test_manager.py
tests/test_reading/: __init__.py  test_progress.py  test_session.py
tests/test_reports/: test_manager.py
tests/test_reviews/: __init__.py  test_manager.py
tests/test_schedule/: __init__.py  test_manager.py
tests/test_search/: test_manager.py
tests/test_series/: __init__.py  test_manager.py
(+112 files in other folders)
